@@ -4,6 +4,7 @@
 * API change: <tt>persistence_key</tt> option replaces <tt>persistent_config_id</tt> option.
 * Impr: headers in panels in the "config" mode now show the widget's global ID.
 * New: Ext version check introduced at initial Netzke load.
+* Depr: :widget_class_name option is deprecated, use :class_name
 
 = v0.4.5.2 - 2009-11-09
 * Fix: Hash#convert_keys and Array#convert_keys in core extensions are now renamed into deep_convert_keys, and now always plainly do what they're expected to do: recursively convert keys according to given block.
